--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <link href="resources/style.css" type="text/css" rel="stylesheet"/>
     <title>Broadway</title>
-      <h1>Broadway Design</h1>
-      <nav>
+  </head>
+  <!--The code above is the header of the page-->
+
+<body>
+  <div id="head">
+    <h1>Broadway Design</h1>
+      <nav class="header">
         <p><a href="#Home">Home</a></p>
         <p><a href="#About">About</a></p>
         <p><a href="#Work">Work</a></p>
         <p><a href="#Team">Team</a></p>
         <p><a href="#Contact">Contact</a></p>
-      </nav>
-  </head>
-  <!--The code above is the header of the page-->
-
-  <body>
+        </nav>
+  </div>
     <h2>Our Process</h2>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
     <h3>Identify</h3>
@@ -41,16 +43,15 @@
   <div id="Work"> </div>
   <div id="Team"> </div>
   <div id="Contact"> </div>
-  <footer>
-    <div class="bottom">
+</body>
+<footer>
+    <nav class="bottom">
       <p>&copy; Broadway 2016</p>
-      <p>Home</p>
-      <p>About</p>
-      <p>Work</p>
-      <p>Team</p>
-      <p>Contact</p>
-    </div>
+      <p><a href="#Home">Home</a></p>
+      <p><a href="#About">About</a></p>
+      <p><a href="#Work">Work</a></p>
+      <p><a href="#Team">Team</a></p>
+      <p><a href="#Contact">Contact</a></p>
+    </nav>
   </footer>
-
-  </body>
 </html>
