--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
   <!--The code above is the header of the page-->
 
 <body>
-  <div id="head">
-    <h1>Broadway Design</h1>
-      <nav class="header">
-        <p><a href="#Home">Home</a></p>
-        <p><a href="#About">About</a></p>
-        <p><a href="#Work">Work</a></p>
-        <p><a href="#Team">Team</a></p>
-        <p><a href="#Contact">Contact</a></p>
-        </nav>
-  </div>
+  <nav>
+    <h1 id="large-title" >Broadway Design</h1>
+        <p><a class="header" href="#Home">Home</a></p>
+        <p><a class="header" href="#About">About</a></p>
+        <p><a class="header" href="#Work">Work</a></p>
+        <p><a class="header" href="#Team">Team</a></p>
+        <p><a class="header" href="#Contact">Contact</a></p>
+  </nav>
     <h2>Our Process</h2>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
+
     <h3>Identify</h3>
     <p> We focus on the most important details</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+
     <h3>Understand</h3>
     <p>We study our projects inside and out</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+
     <h3>Execute</h3>
     <p>We put everything we have into our work</p>
+
     <h3>Designed in New York</h3>
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
