--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--The code above is the header of the page-->
 
 <body>
-  <nav>
+  <nav class="image">
     <h1 id="large-title">Broadway Design</h1>
         <p><a class="header" href="#Home">Home</a></p>
         <p><a class="header" href="#About">About</a></p>
