Wrote in the rest of the CSS code for the body

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
 
     <h3>Identify</h3>
-    <p> We focus on the most important details</p>
+    <p class="focus"> We focus on the most important details</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
 
     <h3>Understand</h3>
-    <p>We study our projects inside and out</p>
+    <p class="focus">We study our projects inside and out</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
 
     <h3>Execute</h3>
-    <p>We put everything we have into our work</p>
+    <p class="focus">We put everything we have into our work</p>
 
     <h3>Designed in New York</h3>
     <h3>Portfolio</h3>
-    <p>Coming Soon</p>
+    <p class="focus">Coming Soon</p>
     <h3>Team</h3>
-    <p>We're Hiring!</p>
+    <p class="focus">We're Hiring!</p>
     <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>E-mail: test@example.com</p>
-    <p>Twitter: @test</p>
+    <p class="focus">Phone: (555)-555-5555</p>
+    <p class="focus">E-mail: test@example.com</p>
+    <p class="focus">Twitter: @test</p>
     <!-- The code above is the body of the page-->
 
   <div id="Home"> </div>
@@ -48,7 +48,7 @@
 </body>
 <footer>
     <nav class="bottom">
-      <p>&copy; Broadway 2016</p>
+      <p class="special">&copy; Broadway 2016</p>
       <p><a href="#Home">Home</a></p>
       <p><a href="#About">About</a></p>
       <p><a href="#Work">Work</a></p>
