--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3>Execute</h3>
     <p class="focus">We put everything we have into our work</p>
 
-    <h3>Designed in New York</h3>
+    <h3 class="New-York">Designed in New York</h3>
     <h3>Portfolio</h3>
     <p class="focus">Coming Soon</p>
     <h3>Team</h3>
