Fixed foter problem

--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
   <div id="Contact"> </div>
 </body>
 <footer>
-    <nav class="bottom">
-      <p class="special">&copy; Broadway 2016</p>
-      <p><a href="#Home">Home</a></p>
-      <p><a href="#About">About</a></p>
-      <p><a href="#Work">Work</a></p>
-      <p><a href="#Team">Team</a></p>
-      <p><a href="#Contact">Contact</a></p>
-    </nav>
+    <div class="bottom">
+      <p>class="special">&copy; Broadway 2016</p>
+      <p>
+      <a class="navigation" href="#Home">Home</a>
+      <a class="navigation" href="#About">About</a>
+      <a class="navigation" href="#Work">Work</a>
+      <a class="navigation" href="#Team">Team</a>
+      <a class="navigation" href="#Contact">Contact</a>
+    </p>
+  </div>
   </footer>
 </html>
