--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </body>
 <footer>
     <div class="bottom">
-      <p>class="special">&copy; Broadway 2016</p>
+      <p class="special">&copy; Broadway 2016</p>
       <p>
       <a class="navigation" href="#Home">Home</a>
       <a class="navigation" href="#About">About</a>
