Wrapped footer in inline element

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 </body>
 <footer>
     <div class="bottom">
-      <p class="special">&copy; Broadway 2016</p>
-      <p>
+      <p class="special">
+      &copy; Broadway 2016
       <a class="navigation" href="#Home">Home</a>
       <a class="navigation" href="#About">About</a>
       <a class="navigation" href="#Work">Work</a>
